[package]
name = "cloyster"
version = "0.1.0"
edition = "2018"
exclude = ["benchmarks"]

[dependencies]
parking_lot = "0.11"
binary-heap-plus = "0.4.1"
crc32fast = "1.2.1"
blake3 = "1.0.0"
crossbeam-epoch = "0.9.5"
either = "1.6.1"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
fs2 = "0.4.3"
log = "0.4.14"
once_cell = "1.8.0"
crossbeam-channel = "0.5.1"
im = "15.0.0"
libc = "0.2.108"
fxhash = "0.2.1"
crossbeam-utils = "0.8.5"
thiserror = "*"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.5", features = ["futures", "checkpoint"] }

[dev-dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
rand = "0.8.4"
