[package]
name = "cloyster"
version = "0.1.0-alpha.0"
edition = "2018"
exclude = ["benchmarks"]
authors = ["uuhan"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
keywords = ["kv", "storage"]
repository = "https://github.com/uuhan/cloyster"
description = """
Different storage for different store purporse.
"""

[dependencies]
parking_lot = "0.11"
binary-heap-plus = "0.4.1"
crc32fast = "1.2.1"
blake3 = "1.0.0"
crossbeam-epoch = "0.9.5"
either = "1.6.1"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
fs2 = "0.4.3"
log = "0.4.14"
once_cell = "1.8.0"
im = "15.0.0"
libc = "0.2.108"
fxhash = "0.2.1"
crossbeam-utils = "0.8.5"
thiserror = "1"
abyss-promise = "0.1.1"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.5", features = ["futures", "checkpoint"] }

[dev-dependencies]
env_logger = "0.9.0"
rand = "0.8.4"
